# rust_embedded_nrf52

./: Cargo.toml  memory.x  nrf52840.svd
.cargo/: config.toml
src/: main.rs
src/ltr390/: example.rs  mod.rs  register.rs  types.rs
