[package]
name = "rust_embedded_nrf52"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
# nrf52833-hal = { version = "0.19.0", features = ["rt"] }
nrf52840-hal = { version = "0.19.0", features = ["rt"] }
panic-halt = "1.0.0"
rtt-target = "0.6.2"
